link text was corrected

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -139,7 +139,7 @@
             <section class="articles page-constraint">
                 <div class="row">
                     <h3>Featured Article</h3>
-                    <a class="styled-link" href="/">see all category</a>
+                    <a class="styled-link" href="/">see all article</a>
                 </div>
                 <div class="cards-container">
                     <div class="card">
@@ -208,7 +208,7 @@
             <section class="articles page-constraint">
                 <div class="row">
                     <h3>CSS</h3>
-                    <a class="styled-link" href="/">see all category</a>
+                    <a class="styled-link" href="/">see all article</a>
                 </div>
                 <div class="cards-container">
                     <div class="card">
@@ -277,7 +277,7 @@
             <section class="articles page-constraint">
                 <div class="row">
                     <h3>javascript</h3>
-                    <a class="styled-link" href="/">see all category</a>
+                    <a class="styled-link" href="/">see all article</a>
                 </div>
                 <div class="cards-container">
                     <div class="card">
@@ -346,7 +346,7 @@
             <section class="articles page-constraint">
                 <div class="row">
                     <h3>React JS</h3>
-                    <a class="styled-link" href="/">see all category</a>
+                    <a class="styled-link" href="/">see all article</a>
                 </div>
                 <div class="cards-container">
                     <div class="card">
